--- a/css/stylest.css
+++ b/css/stylest.css
@@ -11,6 +11,7 @@ body {
     header {
         order: 0;
     }
+    
     .nav-menu { 
         order: 2;
         max-width: 960px;
@@ -50,6 +51,10 @@ body {
     margin-bottom: 20px;
   }
 
+.logo img {
+    max-width: 48px;
+    height: auto;
+}
  /* настройка нав меню ссылок*/
 .nav-menu {
     background-color: aqua;
