--- a/css/stylest.css
+++ b/css/stylest.css
@@ -6,6 +6,9 @@ body {
     flex-direction: column;
   }
   
+  * {
+    box-sizing: border-box;
+}
   /* Media Queries для планшетов и компьютеров*/
   @media (min-width: 768px) {
     header {
