--- a/css/stylest.css
+++ b/css/stylest.css
@@ -4,6 +4,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
   
   /* Media Queries для планшетов и компьютеров*/
