--- a/css/stylest.css
+++ b/css/stylest.css
@@ -5,6 +5,9 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
   
   /* Media Queries для планшетов и компьютеров*/
