--- a/css/stylest.css
+++ b/css/stylest.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
   }
   
   /* Media Queries для планшетов и компьютеров*/
@@ -82,7 +83,7 @@ header a {
     margin-bottom: 20px;
     background-color: rgb(190, 129, 37);
     padding-left: 16px;
-    width: 90%
+    width: 100%
 }
   /* настройка таблицы, цвета строк,столбиков,линий*/
 thead th {
